crates/formatter/tests/snapshots/snapshots__migrations__000519_chatd_core_state_machine.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Rollback for the chatd core state machine foundation migration.

-- 1. Recreate chats_expanded without the new chat fields. We must drop
-- the view first because the subsequent column drops would fail with
-- "view depends on column".
drop view if exists chats_expanded;

-- 2. Drop the worker acquisition candidates index.
drop index if exists idx_chats_worker_acquisition_candidates;

-- 3. Drop the retry state trigger and function.
drop trigger if exists trigger_sync_chat_retry_state on chats;
drop function IF exists sync_chat_retry_state();

-- 4. Drop the queue version triggers and function.
drop trigger if exists trigger_bump_chat_queue_version_on_queued_message_delete on chat_queued_messages;
drop trigger if exists trigger_bump_chat_queue_version_on_queued_message_update on chat_queued_messages;
drop trigger if exists trigger_bump_chat_queue_version_on_queued_message_insert on chat_queued_messages;
drop function IF exists bump_chat_queue_version_on_queued_message_change();

-- 5. Drop the message revision triggers and functions.
drop trigger if exists trigger_update_chat_history_after_message_update on chat_messages;
drop trigger if exists trigger_update_chat_history_after_message_insert on chat_messages;
drop trigger if exists trigger_set_chat_message_revision_on_update on chat_messages;
drop trigger if exists trigger_set_chat_message_revision_on_insert on chat_messages;
drop function IF exists update_chat_history_after_message_update();
drop function IF exists update_chat_history_after_message_insert();
-- The pre-split function name is kept here for backward compatibility
-- with environments that may have applied an earlier draft of the up
-- migration. DROP FUNCTION IF EXISTS is a no-op if the function is
-- absent.
drop function IF exists update_chat_history_after_message_changes();
drop function IF exists set_chat_message_revision_before();
drop function IF exists set_chat_message_revision();

-- 6. Drop chat_heartbeats (and its index by association).
drop table if exists chat_heartbeats;

-- 7. Drop chat_queued_messages.position and its default sequence, plus
-- created_by.
alter table chat_queued_messages alter column position drop default;
alter table chat_queued_messages
	drop column if exists position,
	drop column if exists created_by;
drop sequence if exists chat_queued_messages_position_seq;

-- 8. Drop chat_messages.revision.
alter table chat_messages drop column if exists revision;

-- 9. Drop the new chats columns.
alter table chats
	drop column if exists snapshot_version,
	drop column if exists history_version,
	drop column if exists queue_version,
	drop column if exists generation_attempt,
	drop column if exists retry_state,
	drop column if exists retry_state_version,
	drop column if exists runner_id,
	drop column if exists requires_action_deadline_at;

-- 10. Recreate chats_expanded with the pre-migration field list.
create view chats_expanded as
select
	c.id,
	c.owner_id,
	c.workspace_id,
	c.title,
	c.status,
	c.worker_id,
	c.started_at,
	c.heartbeat_at,
	c.created_at,
	c.updated_at,
	c.parent_chat_id,
	c.root_chat_id,
	c.last_model_config_id,
	c.archived,
	c.last_error,
	c.mode,
	c.mcp_server_ids,
	c.labels,
	c.build_id,
	c.agent_id,
	c.pin_order,
	c.last_read_message_id,
	c.last_injected_context,
	c.dynamic_tools,
	c.organization_id,
	c.plan_mode,
	c.client_type,
	c.last_turn_summary,
	coalesce(root.user_acl, c.user_acl) as user_acl,
	coalesce(root.group_acl, c.group_acl) as group_acl,
	owner.username as owner_username,
	owner.name as owner_name
from chats c
	left join chats root on root.id = coalesce(c.root_chat_id, c.parent_chat_id)
	join visible_users owner on owner.id = c.owner_id;

-- 11. The `interrupting` chat_status enum value is intentionally left
-- in place. Postgres does not support dropping a single enum value
-- without recreating the entire type, which would require rewriting
-- every chat row and is unsafe inside a transactional rollback.
