crates/formatter/tests/snapshots/snapshots__migrations__000519_chatd_core_state_machine.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Adds the core chat state-machine storage model.
-- Adds new versioning fields to chats, a revision column to chat_messages,
-- positional ordering and creator tracking to chat_queued_messages, an
-- unlogged chat_heartbeats table for ownership leases, and Postgres
-- triggers that keep history/queue versioning consistent.

-- 1. Add `interrupting` to the chat_status enum.
alter type chat_status add value if not exists 'interrupting';

-- 2. Add new versioning, ownership, retry, and pending-action fields to chats.
alter table chats add column snapshot_version bigint not null default 1,
add column history_version bigint not null default 0,
add column queue_version bigint not null default 0,
add column generation_attempt bigint not null default 0,
add column retry_state jsonb,
add column retry_state_version bigint not null default 0,
add column runner_id uuid,
add column requires_action_deadline_at timestamp with time zone;

comment on column chats.snapshot_version is 'Monotonic version for the full chat snapshot. Starts at 1 so stream loops and workers can use 0 to mean they have not loaded the chat yet.';
comment on column chats.history_version is 'Snapshot version of the latest durable history change. Starts at 0 until chat_messages triggers set it to the current snapshot_version.';
comment on column chats.queue_version is 'Snapshot version of the latest queued-message change. Starts at 0 until chat_queued_messages triggers set it to the current snapshot_version.';

-- 3. Add `revision` to chat_messages. Adding the column as NOT NULL with
-- a constant default backfills existing rows through catalog metadata
-- only, so the highest-volume table is neither rewritten nor scanned for
-- NOT NULL validation while under ACCESS EXCLUSIVE. The default is
-- dropped immediately because the BEFORE INSERT trigger below rejects
-- inserts that pre-assign revision and assigns it from
-- chats.snapshot_version instead.
alter table chat_messages add column revision bigint not null default 1;
alter table chat_messages alter column revision drop default;

-- 4. Backfill chats.history_version = 1 for chats that already have at
-- least one message. We avoid recursive trigger fire by performing the
-- backfill before the triggers are created.
update chats
set history_version = 1
where
	exists (select 1 from chat_messages where chat_messages.chat_id = chats.id);

-- 5. Add `position` and `created_by` to chat_queued_messages.
alter table chat_queued_messages add column position bigint,
add column created_by uuid;

-- 6. Backfill chat_queued_messages.position per chat using row_number(),
-- ordering by created_at and breaking ties by id.
with
	ordered as (
		select
			id, row_number() over (partition by chat_id order by created_at, id) as rn
		from chat_queued_messages
	) update chat_queued_messages
set position = ordered.rn
from ordered
where chat_queued_messages.id = ordered.id;

-- 7. Backfill chat_queued_messages.created_by from chats.owner_id.
update chat_queued_messages
set created_by = chats.owner_id
from chats
where
	chat_queued_messages.chat_id = chats.id
	and chat_queued_messages.created_by is null;

-- 8. Enforce NOT NULL on chat_queued_messages.position and
-- created_by. Legacy queued-message inserts are updated to populate
-- created_by from the chat owner when no explicit creator exists.
alter table chat_queued_messages alter column position set not null,
alter column created_by set not null;

-- 9. Default sequence for new queued-message positions.
-- A global sequence is acceptable because ordering only needs to be
-- stable within a chat.
create sequence if not exists chat_queued_messages_position_seq as bigint start with 1;
select
	setval(
		'chat_queued_messages_position_seq',
		GREATEST((select COALESCE(MAX(position), 0) from chat_queued_messages), 1)
	);
alter table chat_queued_messages alter column position set default nextval(
	'chat_queued_messages_position_seq'
);

-- 10. Backfill chats.queue_version = 1 for chats that already have queued
-- messages. Same trigger-avoidance reasoning as for history_version.
update chats
set queue_version = 1
where
	exists (
		select 1
		from chat_queued_messages
		where chat_queued_messages.chat_id = chats.id
	);

-- 11. chat_heartbeats: unlogged table for ownership leases. Keyed by
-- (chat_id, runner_id) so a single chat can briefly have entries from
-- multiple runners during failover.
create unlogged table if not exists chat_heartbeats (
	chat_id uuid not null references chats (id) on delete cascade,
	runner_id uuid not null,
	heartbeat_at timestamp with time zone not null,
	primary key (chat_id, runner_id)
);

comment on table chat_heartbeats is 'Ephemeral runner ownership leases for runnable chats. The table is unlogged because losing heartbeat rows after a crash is safe: missing heartbeats are treated as stale ownership and cause workers to reacquire runnable chats.';

create index if not exists chat_heartbeats_heartbeat_at_idx on chat_heartbeats (
	heartbeat_at
);

-- 12. Message revision trigger.
-- The BEFORE-trigger only assigns NEW.revision from chats.snapshot_version
-- and validates immutability. The chats.history_version /
-- generation_attempt update is performed by an AFTER STATEMENT trigger
-- so it doesn't conflict with CTE updates on the chats row in the same
-- command (the legacy InsertChatMessages query updates last_model_config_id
-- in a CTE on chats and then inserts messages).
create function set_chat_message_revision_before() returns trigger as $$
	declare
		chat_snapshot_version bigint;
	begin
		if TG_OP = 'INSERT' and NEW.revision is not null then
			raise exception 'chat_messages.revision must be assigned by trigger';
		end if;
		if TG_OP = 'UPDATE' then
			if OLD.chat_id is distinct from NEW.chat_id then
				raise exception 'chat_messages.chat_id is immutable';
			end if;
			if OLD.revision is distinct from NEW.revision then
				raise exception 'chat_messages.revision must be assigned by trigger';
			end if;
			if OLD is not distinct from NEW then
				return NEW;
			end if;
		end if;
		select snapshot_version
		into chat_snapshot_version
		from chats
		where id = NEW.chat_id;
		if chat_snapshot_version is null then
			raise exception 'chat % does not exist', NEW.chat_id;
		end if;
		new.revision = chat_snapshot_version;
		return NEW;
	end;
$$ language plpgsql;

-- AFTER STATEMENT trigger functions. Use the transition tables to
-- update chats.history_version / generation_attempt once per chat per
-- command. Running AFTER row inserts/updates complete lets a CTE
-- update on the same chats row in the same command finalize before
-- this trigger needs to update it.
--
-- The INSERT and UPDATE variants are split so the UPDATE variant can
-- reference both the OLD and NEW transition tables and skip rows that
-- did not actually change. Without that filter, a no-op UPDATE on a
-- chat_messages row (one whose OLD IS NOT DISTINCT FROM NEW) would
-- still advance chats.history_version whenever the chat's snapshot
-- had previously been bumped.
create function update_chat_history_after_message_insert() returns trigger as $$
	begin
		update chats c
		set history_version = c.snapshot_version, generation_attempt = 0
		from (select distinct chat_id from chat_message_history_new_rows) as affected
		where
			c.id = affected.chat_id
			and (
				c.history_version is distinct from c.snapshot_version
				or c.generation_attempt <> 0
			);
		return null;
	end;
$$ language plpgsql;

create function update_chat_history_after_message_update() returns trigger as $$
	begin
		update chats c
		set history_version = c.snapshot_version, generation_attempt = 0
		from
			(
				select distinct n.chat_id
				from
					chat_message_history_new_rows n
					join chat_message_history_old_rows o on o.id = n.id
				where o is distinct from n
			) as affected
		where
			c.id = affected.chat_id
			and (
				c.history_version is distinct from c.snapshot_version
				or c.generation_attempt <> 0
			);
		return null;
	end;
$$ language plpgsql;

create trigger trigger_set_chat_message_revision_on_insert before insert on chat_messages for each row execute function set_chat_message_revision_before();

create trigger trigger_set_chat_message_revision_on_update before update on chat_messages for each row execute function set_chat_message_revision_before();

create trigger trigger_update_chat_history_after_message_insert after insert on chat_messages referencing new table as chat_message_history_new_rows for each statement execute function update_chat_history_after_message_insert();

create trigger trigger_update_chat_history_after_message_update after update on chat_messages referencing old table as chat_message_history_old_rows new table as chat_message_history_new_rows for each statement execute function update_chat_history_after_message_update();

-- 13. Queue version trigger function.
create function bump_chat_queue_version_on_queued_message_change() returns trigger as $$
	declare
		changed_chat_id uuid;
	begin
		if TG_OP = 'DELETE' then
			changed_chat_id = OLD.chat_id;
		else
			changed_chat_id = NEW.chat_id;
		end if;
		update chats set queue_version = snapshot_version where id = changed_chat_id;
		if TG_OP = 'DELETE' then
			return OLD;
		end if;
		return NEW;
	end;
$$ language plpgsql;

create trigger trigger_bump_chat_queue_version_on_queued_message_insert after insert on chat_queued_messages for each row execute function bump_chat_queue_version_on_queued_message_change();

create trigger trigger_bump_chat_queue_version_on_queued_message_update after update of content,
model_config_id,
position,
created_by on chat_queued_messages for each row execute function bump_chat_queue_version_on_queued_message_change();

create trigger trigger_bump_chat_queue_version_on_queued_message_delete after delete on chat_queued_messages for each row execute function bump_chat_queue_version_on_queued_message_change();

-- 14. Retry state trigger function.
create function sync_chat_retry_state() returns trigger as $$
	begin
		if OLD.retry_state_version is distinct from NEW.retry_state_version then
			raise exception 'chats.retry_state_version must be assigned by trigger';
		end if;
		if NEW.generation_attempt is distinct from OLD.generation_attempt then
			new.retry_state = null;
		end if;
		if NEW.retry_state is distinct from OLD.retry_state then
			new.retry_state_version = NEW.snapshot_version;
		end if;
		return NEW;
	end;
$$ language plpgsql;

create trigger trigger_sync_chat_retry_state before update of retry_state,
retry_state_version,
generation_attempt on chats for each row execute function sync_chat_retry_state();

-- 15. Index for the chat worker acquisition scan, which runs every 30
-- seconds per replica plus on every worker wake. Leading on status lets
-- the scan touch only rows in the worker-runnable status set instead of
-- sequentially scanning the ever-growing chats table. The status set is
-- intentionally not part of the index predicate: 'interrupting' is added
-- to chat_status above, and Postgres forbids using a new enum value in
-- the same transaction, which all migrations share.
create index idx_chats_worker_acquisition_candidates on chats using btree(
	status,
	updated_at,
	id
)
where archived = false;

-- 16. Refresh chats_expanded to include the new chat fields. Drop and
-- recreate so column ordering is stable.
drop view if exists chats_expanded;
create view chats_expanded as
select
	c.id,
	c.owner_id,
	c.workspace_id,
	c.title,
	c.status,
	c.worker_id,
	c.started_at,
	c.heartbeat_at,
	c.created_at,
	c.updated_at,
	c.parent_chat_id,
	c.root_chat_id,
	c.last_model_config_id,
	c.archived,
	c.last_error,
	c.mode,
	c.mcp_server_ids,
	c.labels,
	c.build_id,
	c.agent_id,
	c.pin_order,
	c.last_read_message_id,
	c.last_injected_context,
	c.dynamic_tools,
	c.organization_id,
	c.plan_mode,
	c.client_type,
	c.last_turn_summary,
	c.snapshot_version,
	c.history_version,
	c.queue_version,
	c.generation_attempt,
	c.retry_state,
	c.retry_state_version,
	c.runner_id,
	c.requires_action_deadline_at,
	COALESCE(root.user_acl, c.user_acl) as user_acl,
	COALESCE(root.group_acl, c.group_acl) as group_acl,
	owner.username as owner_username,
	owner.name as owner_name
from
	chats c
	left join chats root on root.id = COALESCE(c.root_chat_id, c.parent_chat_id)
	join visible_users owner on owner.id = c.owner_id;
