crates/formatter/tests/snapshots/snapshots__migrations__000520_aibridge_agent_firewall_session.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop index if exists idx_aibridge_interceptions_agent_firewall_session_id;

alter table aibridge_interceptions
	drop column if exists agent_firewall_sequence_number,
	drop column if exists agent_firewall_session_id;
