crates/formatter/tests/snapshots/snapshots__migrations__000520_aibridge_agent_firewall_session.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- No FK to agent firewall sessions: Bridge interceptions may be recorded
-- before the session row exists, since Agent Firewall log delivery is async.
-- agent_firewall_session_id is a soft reference resolved at query time.
alter table aibridge_interceptions add column agent_firewall_session_id uuid null,
add column agent_firewall_sequence_number int null;

comment on column aibridge_interceptions.agent_firewall_session_id is 'The Agent Firewall session ID, linking this Bridge interception to an Agent Firewall confinement session.';
comment on column aibridge_interceptions.agent_firewall_sequence_number is 'The Agent Firewall sequence number from the request header. Used to determine exact ordering of network requests relative to Agent Firewall audit events. NULL when the request did not pass through Agent Firewall.';

create index idx_aibridge_interceptions_agent_firewall_session_id on aibridge_interceptions (
	agent_firewall_session_id
)
where agent_firewall_session_id is not null;
