crates/formatter/tests/snapshots/snapshots__migrations__000521_drop_boundary_logs_session_fk.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Delete orphaned logs that have no matching session before restoring
-- the FK constraint.
delete from boundary_logs bl
where
	not exists (select 1 from boundary_sessions bs where bs.id = bl.session_id);

alter table boundary_logs add constraint boundary_logs_session_id_fkey foreign key (
	session_id
) references boundary_sessions (id) on delete cascade;
