crates/formatter/tests/snapshots/snapshots__migrations__000521_drop_boundary_logs_session_fk.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Drop the foreign key so that boundary logs can be inserted before
-- the session row exists. The session is created lazily and may fail
-- on transient errors; removing the FK lets logs persist regardless.
-- The session row will be created on a subsequent batch, retroactively
-- linking the orphaned logs via session_id.
alter table boundary_logs drop constraint boundary_logs_session_id_fkey;
