crates/formatter/tests/snapshots/snapshots__migrations__000522_workspace_agent_context.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table if exists workspace_agent_context_resources;
drop table if exists workspace_agent_context_snapshots;
drop type if exists workspace_agent_context_resource_status;
drop type if exists workspace_agent_context_body_kind;
